@@ -1,3 +1,8 @@
+2007-06-01 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.mingw/Makefile: upgraded to gcc-4.2.0,
+	  binutils-2.17, mingw-runtime-3.12, w32api-3.9 
+
 2007-05-05 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.nsis/Makefile: updated to NSIS version 2.27
